--- a/index.html
+++ b/index.html
@@ -3,45 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>专注空间 | 锁机番茄钟</title>
-    <style>
-        :root {
-            --work-theme: #ff6b6b;
-            --short-theme: #51cf66;
-            --long-theme: #5c7cff;
-        }
-        body {
-            margin: 0; min-height: 100vh;
-            display: flex; justify-content: center; align-items: center;
-            font-family: -apple-system, sans-serif;
-            transition: background 0.8s ease;
-            background-color: var(--work-theme);
-            overflow: hidden; 
-        }
+    <title>OFF</title> <style>
+        :root { --work-theme: #ff6b6b; --short-theme: #51cf66; --long-theme: #5c7cff; }
+        body { margin: 0; min-height: 100vh; display: flex; justify-content: center; align-items: center; font-family: -apple-system, sans-serif; transition: background 0.8s ease; background-color: var(--work-theme); overflow: hidden; }
         .app-container { width: 90%; max-width: 400px; }
-        .ios-card {
-            background: rgba(255, 255, 255, 0.2);
-            backdrop-filter: blur(45px) saturate(180%);
-            -webkit-backdrop-filter: blur(45px) saturate(180%);
-            border-radius: 35px; border: 1px solid rgba(255,255,255,0.4);
-            box-shadow: 0 20px 50px rgba(0,0,0,0.1);
-            margin-bottom: 20px; text-align: center;
-            transition: 0.5s opacity ease; /* 增加消失动画 */
-        }
+        .ios-card { background: rgba(255, 255, 255, 0.2); backdrop-filter: blur(45px); border-radius: 35px; border: 1px solid rgba(255,255,255,0.4); margin-bottom: 20px; text-align: center; transition: 0.5s opacity ease; }
         .mode-nav { display: flex; padding: 8px; gap: 8px; }
-        .mode-nav button {
-            flex: 1; border: none; background: transparent; padding: 12px;
-            border-radius: 20px; font-weight: 700; color: rgba(0,0,0,0.4); cursor: pointer;
-        }
+        .mode-nav button { flex: 1; border: none; background: transparent; padding: 12px; border-radius: 20px; font-weight: 700; color: rgba(0,0,0,0.4); }
         .mode-nav button.active { background: white; color: #000; }
         .timer-card { padding: 40px 30px; }
-        .status-tag { font-size: 0.8rem; font-weight: 800; letter-spacing: 2px; color: rgba(0,0,0,0.3); }
-        .timer-display {
-            font-size: 6rem; font-weight: 800; margin: 15px 0; color: #1d1d1f;
-            font-variant-numeric: tabular-nums; letter-spacing: -4px;
-        }
-        .progress-track { width: 100%; height: 8px; background: rgba(0,0,0,0.05); border-radius: 10px; margin-bottom: 40px; overflow: hidden; }
-        .progress-fill { width: 0%; height: 100%; background: #000; transition: width 1s linear; }
+        .timer-display { font-size: 6rem; font-weight: 800; margin: 15px 0; color: #1d1d1f; font-variant-numeric: tabular-nums; }
         .control-group { display: flex; gap: 15px; justify-content: center; }
         .control-group button { border: none; padding: 18px 40px; border-radius: 25px; font-size: 1.1rem; font-weight: 700; cursor: pointer; }
         .btn-start { background: #000; color: #fff; }
@@ -53,13 +24,9 @@
         <nav class="mode-nav ios-card" id="nav-bar">
             <button onclick="changeMode('work')" id="work-btn" class="active">专注</button>
             <button onclick="changeMode('short')" id="short-btn">短休</button>
-            <button onclick="changeMode('long')" id="long-btn">长休</button>
         </nav>
-
         <main class="timer-card ios-card">
-            <div class="status-tag" id="mode-text">WORK SESSION</div>
-            <div class="timer-display" id="display">25:00</div>
-            <div class="progress-track"><div class="progress-fill" id="progress"></div></div>
+            <div id="display" class="timer-display">25:00</div>
             <div class="control-group">
                 <button onclick="toggleTimer()" id="ctrl-btn" class="btn-start">开始</button>
                 <button onclick="resetTimer()" class="btn-reset">重置</button>
@@ -68,20 +35,13 @@
     </div>
 
     <script>
-        let timeLeft = 1500, totalTime = 1500, timerId = null, currentMode = 'work';
-        const settings = {
-            work: { time: 1500, label: '专注中...', theme: '#ff6b6b' },
-            short: { time: 300, label: '短休中...', theme: '#51cf66' },
-            long: { time: 900, label: '长休中...', theme: '#5c7cff' }
-        };
+        let timeLeft = 1500, totalTime = 1500, timerId = null;
+        const settings = { work: 1500, short: 300 };
 
         function changeMode(mode) {
-            currentMode = mode;
             document.querySelectorAll('.mode-nav button').forEach(b => b.classList.remove('active'));
             document.getElementById(mode + '-btn').classList.add('active');
-            document.body.style.backgroundColor = settings[mode].theme;
-            document.getElementById('mode-text').innerText = settings[mode].label;
-            totalTime = settings[mode].time; timeLeft = totalTime;
+            timeLeft = totalTime = settings[mode];
             pauseTimer(); updateUI();
         }
 
@@ -89,50 +49,30 @@
             const min = Math.floor(timeLeft / 60);
             const sec = timeLeft % 60;
             document.getElementById('display').innerText = `${min}:${sec < 10 ? '0' + sec : sec}`;
-            const ratio = ((totalTime - timeLeft) / totalTime) * 100;
-            document.getElementById('progress').style.width = ratio + "%";
         }
 
         function toggleTimer() {
-            const nav = document.getElementById('nav-bar');
             if (timerId) { 
-                pauseTimer(); 
-                nav.style.opacity = "1"; // 暂停时显示切换按钮
-                nav.style.pointerEvents = "auto";
+                pauseTimer();
+                document.title = "OFF"; // 信号：停止锁定
             } else {
-                // 开始时隐藏菜单，防止你乱点
-                nav.style.opacity = "0"; 
-                nav.style.pointerEvents = "none";
-                document.getElementById('ctrl-btn').innerText = "暂停";
-                
                 timerId = setInterval(() => {
-                    if (timeLeft > 0) { 
-                        timeLeft--; updateUI(); 
-                    } else { 
-                        pauseTimer(); 
-                        nav.style.opacity = "1";
-                        nav.style.pointerEvents = "auto";
-                        alert("时间到！"); 
-                    }
+                    if (timeLeft > 0) { timeLeft--; updateUI(); } 
+                    else { pauseTimer(); document.title = "OFF"; alert("完成！"); }
                 }, 1000);
+                document.getElementById('ctrl-btn').innerText = "暂停";
+                document.title = "ON"; // 信号：开始锁定
+                document.getElementById('nav-bar').style.opacity = "0";
             }
         }
 
         function pauseTimer() { 
-            clearInterval(timerId); 
-            timerId = null; 
-            document.getElementById('ctrl-btn').innerText = "开始"; 
+            clearInterval(timerId); timerId = null; 
+            document.getElementById('ctrl-btn').innerText = "开始";
+            document.getElementById('nav-bar').style.opacity = "1";
         }
 
-        function resetTimer() { 
-            pauseTimer(); 
-            document.getElementById('nav-bar').style.opacity = "1";
-            document.getElementById('nav-bar').style.pointerEvents = "auto";
-            timeLeft = totalTime; 
-            updateUI(); 
-        }
-        updateUI();
+        function resetTimer() { pauseTimer(); document.title = "OFF"; timeLeft = totalTime; updateUI(); }
     </script>
 </body>
 </html>
-
